fixing height of modal on mobile

--- a/docs/styles/index.css
+++ b/docs/styles/index.css
@@ -266,7 +266,7 @@ form button:hover {
         top: 0;
         left: 0;
         width: 100vw;
-        height: 100vh;
+        height: 100%;
         z-index: 999999 !important; 
         background-color: rgba(0, 0, 0, 0.6);
         overflow-y: auto;
